# makeathon-challenge-2026

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  Makefile  deep-research-report.md  download_data.py  pyproject.toml  submission_utils.py
.claude/skills/: string-seed-of-thought
.github/instructions/: agent_maintenance_workflow.instructions.md  challenge_python.instructions.md  code_writing_behavior.instructions.md  data_contracts.instructions.md  delegation_policy.instructions.md  python_quality_gates.instructions.md  qa_readonly.instructions.md  tests.instructions.md
.github/skills/python-linting/: SKILL.md
.github/skills/python-testing/: SKILL.md
.github/skills/string-seed-of-thought/: SKILL.md
.github/workflows/: test_all.yaml  test_os_full_suite.yaml
shinka/: evaluate.py  initial.py  shinka.yaml  train_validation_split.json  train_validation_split.py
simple_ensembles/: __init__.py  balanced_fusion.py  contextual_ensemble_cleanup.py  high_recall_fusion.py  near_peak_temporal_rescue.py  temporal_shallow_cascade.py  temporal_supported_first_hit.py  top_ranked_fusion.py  vector_abs_temporal_ensemble.py
stats_models/: __init__.py  balanced_fusion.py  eligibility_and_patch_votes.py  high_recall_fusion.py  runner.py  spatial_consensus_and_time_median.py  spatial_consensus_and_timing.py  top_ranked_fusion.py
tests/: test_shinka_evaluate.py  test_shinka_initial.py  test_simple_ensembles_cli.py  test_simple_ensembles_contract.py  test_simple_ensembles_full_flow.py  test_spatial_consensus_and_time_median.py  test_spatial_consensus_and_timing.py  test_stats_models_cleanup.py  test_stats_models_runner.py  test_submission_utils.py  test_train_validation_split.py
