[project]
name = "osapiens-challenge-makeathon-2026"
version = "0.1.0"
description = "Materials for the osapiens Makeathon 2026 deforestation detection challenge."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "geopandas~=1.0.0",
    "numpy~=1.26.4",
    "matplotlib~=3.9.0",
    "pandas~=2.2.2",
    "rasterio~=1.4.3",
    "shapely~=2.0.3",
    "boto3~=1.34",
    "botocore",
    "tqdm~=4.66",
    "ipykernel",
    "jupyter",
]

[dependency-groups]
dev = [
    "black>=24.4.0,<25.0.0",
    "coverage>=7.6.3,<8.0.0",
    "flake8>=7.0.0,<8.0.0",
    "flake8-pyproject>=1.2.3,<2.0.0",
    "isort>=5.13.2,<6.0.0",
    "mypy>=1.9.0,<2.0.0",
    "pre-commit>=3.7.0,<4.0.0",
    "pre-commit-hooks>=4.6.0,<5.0.0",
    "pytest>=8.3.2,<9.0.0",
    "pytest-cov>=6.0.0,<7.0.0",
]

[tool.uv]
package = false
default-groups = ["dev"]

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
pythonpath = [
    ".",
]

[tool.coverage.run]
source = [
    "download_data",
    "submission_utils",
]
omit = [
    "tests/*",
]

[tool.coverage.report]
skip_empty = true
skip_covered = true
